  [+] Captcha - Leave Message
  [+] groups page: last active column
  [+] pre-chat survey, redirect page: show group status - online/offline/away
  [!] do not show empty groups in redirect/survey
  [!] compatibility with the latest mod_security rules
  [+] performance options in settings: update intervals, operator online time threshold
  [+] information messages: visitor navigated to ...

  1.6.1
  -----
  [!] 404 installation problem
  [+] new permission: "Ability to modify profile"
  [+] new project name: Mibew Messenger
  [!] fixed localization of dates for all languages, nice formatting: Today/Yesterday
  [!] fixed online/offline image for groups
  [+] ability to delete operators, confirmation dialog when deleting group/operator/blocked address
  [+] Information about last activity for operators: Online, Today at 22, 01 Jan.., or Never
  [+] new theme: simplicity (by Sheldmandu)
  [!] chat templates are fixed according to html standards

  1.6.0
  -----
  [+] completely new layout of all administrator pages, XHTML 1.0
  [+] New awaiting users and chat log pages
  [+] right menu, show/hide menu on awaiting users page, nice locale chooser
  [+] main page: warning if database is outdated (after install)
  [+] "Updates": news, link to the latest version
  [+] Operator's profile page
  [+] Configurable pre-chat survey
  [+] Create/edit/remove groups
  [+] Canned messages page
  [+] Statistics page
  [+] Popup dialog notification of the new visitor (turned off by default)
  [+] Send message option: enter vs ctrl-enter
  [!] Slow loading of awating visitors page

  1.5.2
  -----
  [+] Ability to disable sound notifications for chat (toolbar button) 
  [+] Switch to SSL in chat (should be enabled in "Settings -> Optional Services")
  [!] lost query parameters after login redirect
  [+] added referrer into button code
  [+] ability to add text for operator into button code, define visitor's name and email
  [!] geolocation on IPs in history