@@ -96,7 +96,7 @@ ${ifnot:showmessage}<input type="hidden" name="message" value="${form:message}"/
 	</td>
 </tr>
 <tr>
-	<td valign="top" style="padding:0px 0px 0px 24px;">
+	<td valign="top" align="center" style="padding:0px 24px;">
 ${if:errors}
 		<table cellspacing="0" cellpadding="0" border="0">
 		<tr>
@@ -114,7 +114,7 @@ ${if:groups}
 			<tr>
 				<td class="text">${msg:presurvey.department}</td>
 				<td>
-				<select name="group">${page:groups}</select>
+				<select name="group" style="min-width:200px;">${page:groups}</select>
 				</td>
 			</tr>
 ${endif:groups}
@@ -148,6 +148,14 @@ ${endif:showmessage}
 					</table>
 				</td>
 			</tr>
+		</table>
+
+		<table cellpadding="7" cellspacing="5" border="0" width="100%">
+		<tr>
+			<td id="poweredByTD" align="center" class="copyr">
+				${msg:chat.window.poweredby} <a id="poweredByLink" href="http://openwebim.org" title="Mibew Community" target="_blank">openwebim.org</a>
+			</td>
+		</tr>
 		</table>
 	</td>
 </tr>
