@@ -66,20 +66,20 @@ ${endif:errors}
 		<tr>
 		    <td class="text">${msg:form.field.email}:</td>
 		    <td width="20"></td>
-		    <td><input type="text" name="email" size="50" value="${form:email}" class="username"/></td>
+		    <td><input type="text" name="email" size="50" value="${form:email}" class="field"/></td>
 		</tr>
 		<tr><td height="7" colspan="3"></td></tr>
 		<tr>
 		    <td class="text">${msg:form.field.name}:</td>
 		    <td width="20"></td>
-		    <td><input type="text" name="name" size="50" value="${form:name}" class="username"/></td>
+		    <td><input type="text" name="name" size="50" value="${form:name}" class="field"/></td>
 		</tr>
 		<tr><td height="7" colspan="3"></td></tr>
 		<tr>
 		    <td class="text">${msg:form.field.message}:</td>
 		    <td width="20"></td>
 		    <td height="120" valign="top"><table cellspacing="0" cellpadding="0" border="0"><tr><td colspan="3" bgcolor="#A1A1A1"><img src="${webimroot}/images/free.gif" width="1" height="1" border="0" alt="" /></td></tr><tr><td bgcolor="#A1A1A1"><img src="${webimroot}/images/free.gif" width="1" height="1" border="0" alt="" /></td><td width="100%" height="100%" bgcolor="#FFFFFF" valign="top">
-			    <textarea rows="8" cols="45" name="message" class="message" tabindex="0" style="width:90%;">${form:message}</textarea>
+			    <textarea rows="8" cols="45" name="message" class="field" tabindex="0">${form:message}</textarea>
 		    </td><td bgcolor="#A1A1A1"><img src="${webimroot}/images/free.gif" width="1" height="1" border="0" alt="" /></td></tr><tr><td colspan="3" bgcolor="#A1A1A1"><img src="${webimroot}/images/free.gif" width="1" height="1" border="0" alt="" /></td></tr></table></td>
 		</tr>
 ${if:showcaptcha}
@@ -87,7 +87,7 @@ ${if:showcaptcha}
 		<tr>
 		    <td class="text"><img src="captcha.php"/></td>
 		    <td width="20"></td>
-			<td><input type="text" name="captcha" size="50" maxlength="15" value="" class="username"/></td>
+			<td><input type="text" name="captcha" size="50" maxlength="15" value="" class="field"/></td>
 		</tr>
 ${endif:showcaptcha}
 	</table></td><td bgcolor="#E8A400"><img src="${webimroot}/images/free.gif" width="1" height="1" border="0" alt="" /></td></tr><tr><td><img class="tplimage icrnlb" src="${webimroot}/images/free.gif" border="0" alt=""/></td><td style="background-image: url(${tplroot}/images/winbg.gif)" class="bgcy"><img src="${webimroot}/images/free.gif" width="1" height="1" border="0" alt="" /></td><td><img class="tplimage icrnrb" src="${webimroot}/images/free.gif" border="0" alt=""/></td></tr></table>
@@ -115,7 +115,7 @@ ${endif:showcaptcha}
 		</table>
 	</td>
 
-  	<td width="33%" align="center" class="copyr">${msg:chat.window.poweredby} <a href="${msg:site.url}" title="${msg:company.title}" target="_blank">${msg:chat.window.poweredreftext}</a></td>
+  	<td width="33%" align="center" class="copyr">${msg:chat.window.poweredby} <a id="poweredByLink" href="http://openwebim.org" title="Mibew Community" target="_blank">openwebim.org</a></td>
 
     <td width="33%" align="right">
 		<table cellspacing="0" cellpadding="0" border="0">
