@@ -80,7 +80,7 @@ ${endif:showcaptcha}
 	<table id="footer" cellpadding="0" cellspacing="5" border="0" width="100%">
 		<tr>
 			<td valign="top">
-				${msg:chat.window.poweredby} <a href="${msg:site.url}" title="${msg:company.title}" target="_blank">${msg:chat.window.poweredreftext}</a>
+				${msg:chat.window.poweredby} <a id="poweredByLink" href="http://openwebim.org" title="Mibew Community" target="_blank">openwebim.org</a>
 			</td>
 		</tr>
 	</table>
