@@ -9,6 +9,7 @@
   [!] compatibility with the latest mod_security rules
   [+] performance options in settings: update intervals, operator online time threshold
   [+] information messages: visitor navigated to ...
+  [!] html code in templates, better appearance in Safari
 
   1.6.1
   -----
